welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:10: error: not found: value color
		faireV(color.YELLOW);
                       ^MethodsPicture:11: error: not found: value color
		faireV(color.RED);
                       ^MethodsPicture:12: error: not found: value color
		faireV(color.BLUE);
                       ^MethodsPicture:13: error: not found: value color
		faireV(color.GREEN);
                       ^